# llm-sft

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  train.py
example/: example.jsonl  rola.yaml  rola_4bit.yaml
